GPencil: Strokes go missing after Interpolation from another layer #78042

Closed
opened 2020-06-19 18:24:43 +02:00 by Samuel Bernou · 5 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.87

Blender Version
Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: 211b6c29f7
Worked: (newest version of Blender that worked as expected)

Short description of error
2D Animation in Grease Pencil.
When interpolating in between two keys from a layer X, some images/strokes from another layer Y just disappear.

When modifying the key on which the image disappear (delete some points or add some strokes) and then redo the process of interpolation (from a different layer X ), the image that was disappearing still disappear BUT the new strokes stays.
See video attached.

If we successfully isolated the key affected by the disappearing, we do not know why it affected this one in particular and strangely enough we could safely isolate it from the other keys (move it around the timeline) without changing the disappearance.

Exact steps for others to reproduce the error

  • Open attached .blend file
  • Interpolate in between the 2 keys of the 'to_interpolate' layer
  • Image on the "do_not-touch" layer should disappear

Thanks for your help.
bug_GP_disappear_on_interpolate.blend

video_bug_GP_disappear.mp4

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.87 **Blender Version** Broken: version: 2.83.0, branch: master, commit date: 2020-06-03 14:38, hash: `211b6c29f7` Worked: (newest version of Blender that worked as expected) **Short description of error** 2D Animation in Grease Pencil. When interpolating in between two keys from a layer X, some images/strokes from another layer Y just disappear. When modifying the key on which the image disappear (delete some points or add some strokes) and then redo the process of interpolation (from a different layer X ), the image that was disappearing still disappear BUT the new strokes stays. See video attached. If we successfully isolated the key affected by the disappearing, we do not know why it affected this one in particular and strangely enough we could safely isolate it from the other keys (move it around the timeline) without changing the disappearance. **Exact steps for others to reproduce the error** - Open attached .blend file - Interpolate in between the 2 keys of the 'to_interpolate' layer - Image on the "do_not-touch" layer should disappear Thanks for your help. [bug_GP_disappear_on_interpolate.blend](https://archive.blender.org/developer/F8632284/bug_GP_disappear_on_interpolate.blend) [video_bug_GP_disappear.mp4](https://archive.blender.org/developer/F8632283/video_bug_GP_disappear.mp4)

Added subscriber: @Pullup

Added subscriber: @Pullup
Antonio Vazquez self-assigned this 2020-06-19 19:19:08 +02:00
Antonio Vazquez changed title from Grease Pencil Strokes go missing after Interpolation from another layer to GPencil: Strokes go missing after Interpolation from another layer 2020-06-19 19:19:23 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 2a78504d0c

This issue was referenced by 2a78504d0c18ea3105e69be9a2ed92a21961993b

This issue was referenced by ce7a5a2376

This issue was referenced by ce7a5a23767c2f628a69496590b415318f7eb89f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78042
There is no content yet.